<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tamp_htn_stream</name>
  <version>1.0.0</version>
  <description>Core package: HTN-style TAMP stream planner runner with plugin loading.</description>

  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredyński</maintainer>
  <author email="dawid.seredynski@gmail.com">Dawid Seredyński</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
