<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tamp_htn_stream_examples</name>
  <version>1.0.0</version>
  <description>Examples package: configuration files and example Python plugins for tamp_htn_stream.</description>

  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredyński</maintainer>
  <author email="dawid.seredynski@gmail.com">Dawid Seredyński</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>tamp_htn_stream</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
